syntax = "proto3";

package proto;

message UerRequest{
    string name = 1;
}

message UerResponse{
    int32 id = 1;
    string name = 2;
    int32 age = 3;
    repeated string hobby = 4;
}
service UserInfoService{
    rpc GetUserInfo(UerRequest)returns(UerResponse){}
}